# seqtoid-pipelines

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: avx512_parsers.rs
docs/: contributing.md  index.md  installation.md
docs/pipelines/: consensus_genome.md  db.md
scripts/: bulk-sra-transfer.py  minimap2_split_index.sh  nr_preprocess.rs  reference-taxa-download.py  run-consensus-genome.py
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: defs.rs
src/pipelines/: consensus_genome.rs  db.rs  mod.rs  short_read_mngs.rs
src/utils/: align.rs  blast.rs  command.rs  coverage_viz.rs  db.rs  defs.rs  fastq.rs  fastx.rs  file.rs  metrics.rs  mod.rs  paf.rs  plotting.rs  sambam.rs  sequence.rs  stats.rs  streams.rs  system.rs  taxonomy.rs  vcf.rs
tests/: stress.rs  test_id_matching.rs
tests/data/: test_4_nt.fa  test_7_nt_long_id.fa
