[package]
name = "seqtoid-pipelines"
version = "0.1.1"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.1"
tokio = { version = "1.44.2", features = ["full", "io-util", "fs", "process", "rt-multi-thread"] }
anyhow = "1.0.98"
tokio-stream = { version = "0.1.17", features = ["sync", "io-util"] }
tempfile = "3.19.1"
lazy_static = "1.4.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_distr = "0.5.1"
futures = "0.3.31"
sysinfo = "0.37.0"
fxhash = "0.2.1"
num_cpus = "1.16"
bio = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
plotters = "0.3.7"
rayon = "1.10.0"
chrono = "0.4.41"
thiserror = "2.0.12"
memchr = "2.7.5"
needletail = "0.6.3"
uuid = { version = "1.18.1", features = ["v4"] }
twox-hash = "1.6"
rand_core = "0.6.4"


[dev-dependencies]
sysinfo = "0.37.0"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
anyhow = "1.0.98"

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "seqtoid-pipelines"
path = "src/main.rs"

[lib]
name = "seqtoid_pipelines"
path = "src/lib.rs"
