[package]
name = "seqtoid-pipelines"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.1"
tokio = { version = "1.44.2", features = ["full", "io-util", "fs", "process", "rt-multi-thread"] }
anyhow = "1.0.98"
tokio-stream = { version = "0.1.17", features = ["sync", "io-util"] }
tempfile = "3.19.1"
lazy_static = "1.4.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_distr = "0.5.1"
futures = "0.3.31"
sysinfo = "0.37.0"
num_cpus = "1.16"
bio = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
plotters = "0.3.7"
rayon = "1.10.0"
chrono = "0.4.41"
thiserror = "2.0.12"
memchr = "2.7.5"
needletail = "0.6.3"
uuid = { version = "1.18.1", features = ["v4"] }
twox-hash = "1.6"
rand_core = "0.6.4"
csv = "1.3"
lexical = "6.1.1"
fst = "0.4.7"
bincode = "2.0.1"
ahash = "0.8.12"
noodles = { version = "0.102.0", features = ["bam", "sam", "async"] }
tokio-util = { version = "0.7.17", features = ["io"] }
bytes = "1.11.1"
dashmap = "6.1.0"
regex = "1.12.2"
once_cell = "1.21.3"
nix = { version = "0.31.2", features = ["fs"] }
which = "8.0.2"
proptest = "1.11.0"

[dev-dependencies]
sysinfo = "0.37.0"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
anyhow = "1.0.98"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "seqtoid-pipelines"
path = "src/main.rs"

[lib]
name = "seqtoid_pipelines"
path = "src/lib.rs"

[[bench]]
name = "avx512_parsers"
harness = false
